header gap fixed

--- a/hw/css/style.css
+++ b/hw/css/style.css
@@ -29,23 +29,23 @@ main {
     background-position: 360px 285px;
 }
 header {
+    width: 90%;
     font-size: 16px;
     font-weight: 500;
     display: flex;
     flex-direction: row;
-    column-gap: 1fr;
     align-items: center;
     height: 60px;
 }
 nav {
-    margin-left: 7.5vw;
+    margin-left: 120px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     min-width: 320px;
 }
 .request-button {
-    margin-left: 26.25vw;
+    margin-left: 420px;
     display: flex;
     justify-content: center;
     align-items: center;
